src/test/ui/numeric/numeric-suffix/numeric-suffix-i64.stderr
error[E0308]: mismatched types
  --> $DIR/numeric-suffix-i64.rs:6:16
   |
LL |     foo::<i64>(42_usize);
   |                ^^^^^^^^ expected `i64`, found `usize`
   |
help: change the type of the numeric literal from `usize` to `i64`
   |
LL |     foo::<i64>(42_i64);
   |                   ~~~

error[E0308]: mismatched types
  --> $DIR/numeric-suffix-i64.rs:9:16
   |
LL |     foo::<i64>(42_u64);
   |                ^^^^^^ expected `i64`, found `u64`
   |
help: change the type of the numeric literal from `u64` to `i64`
   |
LL |     foo::<i64>(42_i64);
   |                   ~~~

error[E0308]: mismatched types
  --> $DIR/numeric-suffix-i64.rs:12:16
   |
LL |     foo::<i64>(42_u32);
   |                ^^^^^^ expected `i64`, found `u32`
   |
help: change the type of the numeric literal from `u32` to `i64`
   |
LL |     foo::<i64>(42_i64);
   |                   ~~~

error[E0308]: mismatched types
  --> $DIR/numeric-suffix-i64.rs:15:16
   |
LL |     foo::<i64>(42_u16);
   |                ^^^^^^ expected `i64`, found `u16`
   |
help: change the type of the numeric literal from `u16` to `i64`
   |
LL |     foo::<i64>(42_i64);
   |                   ~~~

error[E0308]: mismatched types
  --> $DIR/numeric-suffix-i64.rs:18:16
   |
LL |     foo::<i64>(42_u8);
   |                ^^^^^ expected `i64`, found `u8`
   |
help: change the type of the numeric literal from `u8` to `i64`
   |
LL |     foo::<i64>(42_i64);
   |                   ~~~

error[E0308]: mismatched types
  --> $DIR/numeric-suffix-i64.rs:21:16
   |
LL |     foo::<i64>(42_isize);
   |                ^^^^^^^^ expected `i64`, found `isize`
   |
help: change the type of the numeric literal from `isize` to `i64`
   |
LL |     foo::<i64>(42_i64);
   |                   ~~~

error[E0308]: mismatched types
  --> $DIR/numeric-suffix-i64.rs:25:16
   |
LL |     foo::<i64>(42_i32);
   |                ^^^^^^ expected `i64`, found `i32`
   |
help: change the type of the numeric literal from `i32` to `i64`
   |
LL |     foo::<i64>(42_i64);
   |                   ~~~

error[E0308]: mismatched types
  --> $DIR/numeric-suffix-i64.rs:28:16
   |
LL |     foo::<i64>(42_i16);
   |                ^^^^^^ expected `i64`, found `i16`
   |
help: change the type of the numeric literal from `i16` to `i64`
   |
LL |     foo::<i64>(42_i64);
   |                   ~~~

error[E0308]: mismatched types
  --> $DIR/numeric-suffix-i64.rs:31:16
   |
LL |     foo::<i64>(42_i8);
   |                ^^^^^ expected `i64`, found `i8`
   |
help: change the type of the numeric literal from `i8` to `i64`
   |
LL |     foo::<i64>(42_i64);
   |                   ~~~

error[E0308]: mismatched types
  --> $DIR/numeric-suffix-i64.rs:34:16
   |
LL |     foo::<i64>(42.0_f64);
   |                ^^^^^^^^ expected `i64`, found `f64`
   |
help: change the type of the numeric literal from `f64` to `i64`
   |
LL |     foo::<i64>(42i64);
   |                  ~~~

error[E0308]: mismatched types
  --> $DIR/numeric-suffix-i64.rs:37:16
   |
LL |     foo::<i64>(42.0_f32);
   |                ^^^^^^^^ expected `i64`, found `f32`
   |
help: change the type of the numeric literal from `f32` to `i64`
   |
LL |     foo::<i64>(42i64);
   |                  ~~~

error: aborting due to 11 previous errors

For more information about this error, try `rustc --explain E0308`.
